# smdemo

./: .gitattributes  .gitignore  CMakeLists.txt  FSM-INTRO.md  README.md  REFERENCE.md  diagrams.drawio  printf_format_spcifiers.md  sdkconfig.defaults
components/state_machine/: CMakeLists.txt  Kconfig  sm.c  sm.h  state_machine.c  state_machine.h
components/state_machine/test/: CMakeLists.txt
esp-idf/: sdkconfig.defaults
esp-idf/components/state_machine/: CMakeLists.txt  sm.c  sm.h
esp-idf/components/state_machine/test/: test_state_machine.c
esp-idf/main/: Kconfig  anvs.c  anvs.h  main.c  proc.c  proc.h  process.c
esp-idf/main/include/: commondefs.h
main/: CMakeLists.txt  Kconfig  anvs.c  idf_component.yml  main.c  proc.c  proc.h  process.c  process.h
main/include/: commondefs.h  events.h
smdemo/: CMakeLists.txt  events.h  main.c  sm.c  sm.h  sm_conf.h
